src/app/components/footer/Footer.module.css
.footer {
  width: 100vw;
  height: 10vh;
  background-color: #219ebc;

  display: flex;
  justify-content: center;
  align-items: center;

  color: white;
}

.footer ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.footer a {
  color: white;
  text-decoration: none;
}

.footer a:hover {
  text-decoration: underline;
}

.container {
  width: 70%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.row {
  width: 50%;
}

.row ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

@media screen and (max-width: 620px) {
  .container,
  .row {
    height: 100%;
  }

  .row ul {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .row ul li {
    margin: 5px 0;
  }
}

